# libqinfinity

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  README
CMakeModules/: FindGSASL.cmake  FindGlib.cmake  FindLibinfinity.cmake  FindLibinftext.cmake  FindLibqinfinitymm.cmake
libqinfinity/: CMakeLists.txt  abstracttextbuffer.cpp  abstracttextbuffer.h  adoptedsession.cpp  adoptedsession.h  adopteduser.cpp  adopteduser.h  browser.cpp  browser.h  browseritemfactory.cpp  browseritemfactory.h  browseriter.cpp  browseriter.h  browsermodel.cpp  browsermodel.h  browsermodel_p.h  buffer.cpp  buffer.h  certificatecredentials.cpp  certificatecredentials.h  communicationgroup.cpp  communicationgroup.h  communicationjoinedgroup.cpp  communicationjoinedgroup.h  communicationmanager.cpp  communicationmanager.h  defaulttextplugin.cpp  defaulttextplugin.h  explorerequest.cpp  explorerequest.h  fileitemfactory.cpp  fileitemfactory.h  filemodel.cpp  filemodel.h  init.cpp  init.h  ipaddress.cpp  ipaddress.h  noderequest.cpp  noderequest.h  (+45 more)
test/: CMakeLists.txt  clientbrowser.cpp  clientbrowser.h  connection.cpp  connection.h  createitemdialog.cpp  createitemdialog.h  guibrowser.cpp  guibrowser.h  newconnectionwidget.ui  shellbrowser.cpp  shellbrowser.h  ui_newconnectionwidget.h
